--- a/public/modules/articles/views/list-articles.client.view.html
+++ b/public/modules/articles/views/list-articles.client.view.html
@@ -1,16 +1,20 @@
 <section data-ng-controller="ArticlesController" data-ng-init="find()">
 	<div class="page-header">
-		<h1>The 7 Summits</h1>
+		<h1>Travel the World</h1>
+		<p> View all of the entries that have been listed all throughout the world! Filter through category or city.<br>
+		<li> start on search bar </li><br>
+	 	<li> maps don't need to really be reorganized here so this actually might work </li></p>
 	</div>
+
 	<div class="list-group">
-		
+
 		<!-- map -->
-		
+
 		<map center="[0,0]" zoom="1">
 
   			<marker ng-repeat='article in articles' position='[{{article.lat}},{{article.lon}}]' visible="true" on-click="gotolink(event,article)">
   		</marker>
-		
+
 		</map>
 
 		<a data-ng-repeat="article in articles" data-ng-href="#!/articles/{{article._id}}" class="list-group-item">
