minor changes to improve list view. minor bug: cannot save entries for category and city upon initial creation but will save when edit. low priority. working on other functionality now

--- a/public/modules/articles/views/create-article.client.view.html
+++ b/public/modules/articles/views/create-article.client.view.html
@@ -44,7 +44,7 @@
 
 				<!-- Input City (manually) -->
 					<div class="form-group" ng-class="{ 'has-error' : submitted && articleForm.city.$invalid}">
-					<label class="control-label" for="city">City Travelled?</label>
+					<label class="control-label" for="content">City Travelled?</label>
 					<div class="controls">
 						<textarea name="content" data-ng-model="article.city" id="content" class="form-control" cols="10" rows="1" placeholder="City" required></textarea>
 					</div>
@@ -56,7 +56,7 @@
 
 				<!-- Radio button for category -->
 				<div class="form-group" ng-class="{ 'has-error' : submitted && articleForm.category.$invalid}">
-					<label class="control-label" for="category">Category</label>
+					<label class="control-label" for="content">Category</label>
 					<br>
 				 <div class="radio">
 													 <label>
