--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,32 +1,16 @@
+
 <section ng-controller="HomeController">
   <br>
     <div>
-      <h2>If you see this, that means you've set up the Repo right! Go Devon!! </h2>
-      <h2> Journey to the past </h2>
-      <p><b> Devon's Next Steps: </b> <br>
-        To change the MAIN core page (which will be index.html, check out views/home.client.view.html)<br>
-      If you'd like to change the main navbar, open up modules/core/client/views/header.client.view.html. <br>
-    If you need to change any of the CSS, go to ../css/core.css. That will change everything on global. <br><br>
-  Realistically this /should/ replicate April's Image of the main page here. If you could somehow change the nav so that it looks similar to that, that'd be great. <br>
+    <h1> Journey to the past </h1>
+<p>
+  A search bar should go here <br>
   If you need a link to her stuff check it out here <a href="https://drive.google.com/open?id=0B_uEOm94-LihM29uUXBYUUFVYzQ">April's Prototype</a></p>
+  <div class = "content">
+    Popular Trips
 
-      <h2> What this boiler-plate can do so far </h2>
-      <p>This sample application tracks users and articles.</p>
-      <ul>
-        <li>
-          Click
-          <em>Sign Up</em> to get started.
-        </li>
-        <li>
-          Configure your app to work with your social accounts, by editing the
-          <em>/config/env/*.js</em> files.
-        </li>
-        <li>
-          Edit your users module.
-        </li>
-        <li>
-          Add new CRUD modules.
-        </li>
-      </ul>
+  </div>
+
+    
     </div>
 </section>
