--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1,3 +1,9 @@
+@font-face {
+	font-family: "Aleo"
+	src:url(/fonts/Aleo-Regular.otf);
+}
+
+
 .content {
 	margin-top: 50px;
 }
@@ -12,4 +18,58 @@
 }
 .ng-valid.ng-dirty {
 	border-color: #78FA89;
+}
+
+
+#main-nav {
+	background:rgb(255,255,255);
+	border-color: #b4afaf;
+}
+
+#logo-font {
+	color: #59d0e1;
+	font-family: "Aleo", Verdana, Geneva, sans-serif;
+	font-weight: bold;
+	font-size: 20px;
+	text-shadow: 0px 0px;
+}
+
+#nav-font {
+	color: #59d0e1;
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 16px;
+	/*font-family: Verdana, Geneva, sans-serif; */
+	text-shadow: 0px 0px;
+}
+
+#nav-collapse-btn {
+	   background-color: #b4afaf;
+}
+
+#bar {
+	background-color: #b4afaf;
+}
+
+#collapse_btn	{
+    border-color: #b4afaf;
+		&:hover,
+		&:focus {
+			background-color: #b4afaf;
+		}
+  }
+
+#grey-font {
+	color: #b4afaf;
+}
+
+#title-font {
+	font-family: "Aleo";
+}
+
+#submit-button {
+	background-color:#59d0e1;
+	background-image: linear-gradient(to bottom, #59d0e1 0%, #53bccc 100%);
+}
+#submit-button:hover, #submit-button:focus {
+	background-color:#59d0e1;
 }
