add to home page and replace favico with something cute Devo choosed

--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -2,15 +2,33 @@
 <section ng-controller="HomeController">
   <br>
     <div>
-    <h1> Journey to the past </h1>
 <p>
-  A search bar should go here <br>
-  If you need a link to her stuff check it out here <a href="https://drive.google.com/open?id=0B_uEOm94-LihM29uUXBYUUFVYzQ">April's Prototype</a></p>
-  <div class = "content">
-    Popular Trips
+  <div class="row">
+          <div class="col-md-6">
+      		<h2>Journey to the past</h2>
+              <div id="custom-search-input">
+                  <div class="input-group col-md-12">
+                      <input type="text" class="form-control input-lg" placeholder="Search by city name" />
+                      <span class="input-group-btn">
+                          <button class="btn btn-info btn-lg" type="button">
+                              <i class="glyphicon glyphicon-search"></i>
+                          </button>
+                      </span>
+                  </div>
+              </div>
+          </div>
+  	</div>
+    <br>
+      <b>Popular Places:</b> New York City, London , Tokyo <br>
+      If you need a link to her stuff check it out here <a href="https://drive.google.com/open?id=0B_uEOm94-LihM29uUXBYUUFVYzQ">April's Prototype</a></p>
+      <h2>Popular Trips</h2>
 
+  <div class="img">
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/03/9b/30/14/puerto-vallarta.jpg">
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/05/a4/ee/8f/san-diego.jpg">
+    <img src="https://capetown-airport.co.za/wp-content/uploads/2016/03/capetownairporthome.jpg">
   </div>
 
-    
+
     </div>
 </section>
