--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1,9 +1,3 @@
-@font-face {
-	font-family: "Aleo"
-	src:url(/fonts/Aleo-Regular.otf);
-}
-
-
 .content {
 	margin-top: 50px;
 }
@@ -20,6 +14,10 @@
 	border-color: #78FA89;
 }
 
+@font-face {
+	font-family: "Aleo"
+	src:url(/fonts/Aleo-Regular.otf);
+}
 
 #main-nav {
 	background:rgb(255,255,255);
@@ -72,4 +70,36 @@
 }
 #submit-button:hover, #submit-button:focus {
 	background-color:#59d0e1;
+}
+
+#custom-search-input{
+    padding: 3px;
+    border: solid 1px #E4E4E4;
+    border-radius: 6px;
+    background-color: #fff;
+}
+
+#custom-search-input input{
+    border: 0;
+    box-shadow: none;
+}
+
+#custom-search-input button{
+    margin: 2px 0 0 0;
+    background: none;
+    box-shadow: none;
+    border: 0;
+    color: #666666;
+    padding: 0 8px 0 10px;
+    border-left: solid 1px #ccc;
+}
+
+#custom-search-input button:hover{
+    border: 0;
+    box-shadow: none;
+    border-left: solid 1px #ccc;
+}
+
+#custom-search-input .glyphicon-search{
+    font-size: 23px;
 }
