--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,11 +1,11 @@
-
 <section ng-controller="HomeController">
   <br>
     <div>
+    <div class="search-section">
 <p>
-  <div class="row">
-          <div class="col-md-6">
-      		<h2>Journey to the past</h2>
+
+          <div class="search-container">
+          <h2 class="title-text">Travel to the Past!</h2>
               <div id="custom-search-input">
                   <div class="input-group col-md-12">
                       <input type="text" class="form-control input-lg" placeholder="Search by city name" />
@@ -17,18 +17,17 @@
                   </div>
               </div>
           </div>
-  	</div>
+
     <br>
       <b>Popular Places:</b> New York City, London , Tokyo <br>
-      If you need a link to her stuff check it out here <a href="https://drive.google.com/open?id=0B_uEOm94-LihM29uUXBYUUFVYzQ">April's Prototype</a></p>
-      <h2>Popular Trips</h2>
+    </div>
 
-  <div class="img">
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/03/9b/30/14/puerto-vallarta.jpg">
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/05/a4/ee/8f/san-diego.jpg">
-    <img src="https://capetown-airport.co.za/wp-content/uploads/2016/03/capetownairporthome.jpg">
-  </div>
-
+      <h2 class="subsection-title">Popular Trips</h2>
+      <div class="img">
+        <img id="pop-img" src="http://d6vrtzdlbankn.cloudfront.net/wp-content/uploads/2017/01/FEB17_0004_Singapore-1-700x420.jpg">
+        <img id="pop-img" src="https://img.grouponcdn.com/deal/2Xfi5tdvSJDf9LGKMn4E/SE-5760x3456/v1/c700x420.jpg">
+        <img id="pop-img" src="http://d6vrtzdlbankn.cloudfront.net/wp-content/uploads/2017/05/iStock-522136778-700x420.jpg">
+      </div>
 
     </div>
 </section>
