--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -5,7 +5,7 @@
 <p>
 
           <div class="search-container">
-          <h2 class="title-text">Travel to the Past!</h2>
+          <h2 class="title-text">Search for Journeys Around the World!</h2>
               <div id="custom-search-input">
                   <div class="input-group col-md-12">
                       <input type="text" class="form-control input-lg" placeholder="Search by city name" />
@@ -24,9 +24,9 @@
 
       <h2 class="subsection-title">Popular Trips</h2>
       <div class="img">
-        <img id="pop-img" src="http://d6vrtzdlbankn.cloudfront.net/wp-content/uploads/2017/01/FEB17_0004_Singapore-1-700x420.jpg">
-        <img id="pop-img" src="https://img.grouponcdn.com/deal/2Xfi5tdvSJDf9LGKMn4E/SE-5760x3456/v1/c700x420.jpg">
-        <img id="pop-img" src="http://d6vrtzdlbankn.cloudfront.net/wp-content/uploads/2017/05/iStock-522136778-700x420.jpg">
+        <a href="http://localhost:3000/#!/articles/592ea0d8bedd9f4c364a395b"><img id="pop-img" src="http://d6vrtzdlbankn.cloudfront.net/wp-content/uploads/2017/01/FEB17_0004_Singapore-1-700x420.jpg"></a>
+        <a href="http://localhost:3000/#!/articles/592eb9d7059181a83b0dc365"><img id="pop-img" src="https://img.grouponcdn.com/deal/2Xfi5tdvSJDf9LGKMn4E/SE-5760x3456/v1/c700x420.jpg"></a>
+        <a href="http://localhost:3000/#!/articles/592ebed1c7772688399f4849"><img id="pop-img" src="http://d6vrtzdlbankn.cloudfront.net/wp-content/uploads/2017/05/iStock-522136778-700x420.jpg"></a>
       </div>
 
     </div>
