add tags to home

--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -19,7 +19,7 @@
           </div>
 
     <br>
-      <b>Popular Places:</b> New York City, London , Tokyo <br>
+      <b>Popular Places:</b> <a href="http://localhost:3000/#!/articles/5931cf35fa2480f43b47788a">New York City</a>, <a href="http://localhost:3000/#!/articles/5931d5a6d4e4844831d3d56b"> London </a>, <a href="http://localhost:3000/#!/articles/5931d652bfe2cadc28945663"> Tokyo </a><br>
     </div>
 
       <h2 class="subsection-title">Popular Trips</h2>
